testdata/rules-tests/ok/AG-014-safe-php-env.php
$openai_key = getenv('OPENAI_API_KEY');
$anthropic_key = $_ENV['ANTHROPIC_API_KEY'];
$hf_token = $_SERVER['HF_TOKEN'];
$appName = "MyApp";
