testdata/rules-tests/bad/AG-014-v1-php-hardcoded-key.php
$openai_key = "sk-abc123def456ghi789jkl012mno345p";
define("ANTHROPIC_API_KEY", "sk-ant-abc123def456ghi789jkl012mno345p");
const HF_TOKEN = "hf_abc123def456ghi789jkl012mno345p";
$apiKey = 'sk-proj-abc123def456ghi789jkl012mno345p678';
